<resources>
    <string name="app_name">Meizi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="err_fail">加载失败\n\n点击空白处刷新</string>
    <string name="err_refresh">刷新</string>
    <string name="transition_name">image</string>


    <string name="title_activity_image" translatable="false">ImageActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="save_local">保存原图</string>
    <string name="set_wallpaper">设置壁纸</string>
    <string name="cancel">取消</string>
    <string name="cancel_app">退出软件</string>
    <string name="gank" translatable="false">Gank.io</string>
    <string name="tngou">TNGou</string>
    <string name="clean_cache">清除缓存</string>
    <string name="setting">设置</string>
    <string name="beauty_portrait">写真</string>
    <string name="beauty_photos">照片</string>
    <string name="pure_beauty">清纯</string>
    <string name="sexy_models">车模</string>
    <string name="silk_stockings">美腿</string>
    <string name="japanese_beauty">日韩</string>
    <string name="sexy_beauty">性感</string>
    <string name="title_activity_settings">Settings</string>
    <string name="github">访问Github</string>
    <string name="about">关于</string>

    <string name="fuli">Gank福利</string>
    <string name="Android">Android</string>
    <string name="iOS">iOS</string>
    <string name="rest_video">休息视频</string>
    <string name="expand_resources">拓展资源</string>
    <string name="web_design">前端</string>
    <string name="all">all</string>
    <string name="title_activity_web">WebActivity</string>

    <string name="title_home">干货集中营</string>
    <string name="title_dashboard">妹子</string>
    <string name="title_notifications">福利</string>
    <string name="All">全部</string>
    <string name="open_browser">用浏览器打开</string>
    <string name="action_share">分享</string>
</resources>
