<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gank"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/gank"/>
        <item
            android:id="@+id/nav_tngou"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tngou"/>
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_clean"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/clean_cache"/>
            <item
                android:id="@+id/nav_cancel"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/cancel_app"/>
        </menu>
    </item>

</menu>
