<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:divider="@drawable/linear_layout_line"
              android:orientation="vertical"
              android:showDividers="middle">

    <TextView
        android:id="@+id/dialog_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/save_local"/>

    <TextView
        android:id="@+id/dialog_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/set_wallpaper"/>

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"/>
</LinearLayout>